<resources>
    <string name="app_name">ParqueoApp</string>
    <string name="tab_text_1">Map</string>
    <string name="tab_text_2">List</string>
    <string name="tab_text_3">Info</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="hor">Horario</string>
    <string name="costo">Costo</string>
    <string name="prop">Propetario</string>
    <string name="nom">Nombre</string>
    <string name="cup">Cupo</string>
</resources>
